﻿# cmd_sing の開発履歴

- 2025-01-06 Ver.0.8
    - 変数を使用可能に。
- 2025-01-06 Ver.0.9
    - 保存に関する不具合を修正。
- 2025-01-09 Ver.1.0
    - 入れ子の変数展開が可能に。
    - 演奏最後の辺りの音飛びを修正。
- 2025-01-12 Ver.1.1
    - OpenAL依存性を解消。致命的な不具合を修正。
- 2025-02-11 Ver.1.2
    - アイコンを変更。
    - 設定を保存するようにした。
    - オプション「-reset」を追加。
- 2025-02-14 Ver.1.3
    - バッチファイル「test0.bat」「test1.bat」を追加。
    - Ctrl+C のハンドラーを追加。
    - ビープ音を追加。
    - エラーメッセージ処理を修正。
    - 循環参照時のエラー処理を追加。
    - ちゃんと「Ok」を表示。
    - ファイル形式の不具合を修正。