@@ -13,8 +13,8 @@
     オプション:
       -D変数名=値            変数に代入。
       -save_wav 出力.wav     WAVファイルとして保存。
-      -reset                 設定をリセット。
-      -stereo                音をステレオにする。
+      -stopm                 音楽を止めて設定をリセット。
+      -mono                  音をモノラルにする。
       -help                  このメッセージを表示する。
       -version               バージョン情報を表示する。
 
@@ -45,10 +45,6 @@
 |`RPj[...]`           |1≦j≦255 |  `[` `]`の中身を`j`回繰り返します。入れ子は8レベルまでです。                                                                                                 |
 
 - 【注意】 `CMD SING`文はタートル拡張命令であり、8801のみで使用できます(無制限モードを除く)。`CMD SING`を使用する前に`BLOAD "@exst*v2"`か`BLOAD "@exst"`を実行する必要があります(無制限モードを除く)。古い機種では[テキスト画面](#text_screen)を消さずに演奏すると、聞きづらくなりますので、[テキスト画面](#text_screen)を`X0`か[`CMD TEXT OFF`](#cmd_text_on_off)で表示を切り替えることをおすすめします。255文字を越える長さの文字列を指定すると、`String too long`エラーが発生します(無制限モードを除く)。
-
-## 注意
-
-- `X` サブコマンドには対応しておりません。
 
 ## 使用許諾
 
