@@ -21,3 +21,7 @@
     - 循環参照時のエラー処理を追加。
     - ちゃんと「Ok」を表示。
     - ファイル形式の不具合を修正。
+- 2025-02-16 Ver.1.4
+    - 音の長さを修正。
+    - 「-reset」を「-stopm」に改名。
+    - 「-stereo」オプションを消して「-mono」オプションを追加。
